# corewar-

./: #corewar_valid.h#  #ft_method.c#  .#corewar_valid.h  ._.idea  ._asm  ._asm_to_binary.c  ._bee_gees.cor  ._bigzork.cor  ._champion  ._cmake-build-debug  ._corewar  ._corewar.h  ._doc_rsc  ._examples  ._fluttershy.cor  ._get_sizes.c  ._helltrain.cor  ._libft  ._op.c  ._op.h  ._resources  ._sub.c  ._test_bot  ._turtle.cor  ._usage.c  ._vm_project  ._zork.cor  .corewar_valid.h.swn  .corewar_valid.h.swo  .corewar_valid.h.swp  .gitignore  .nfs.20051473.286c  CMakeLists.txt  ERROR  Makefile  README.md  asm  asm.h  asm_to_binary.c  author  (+38 more)
123/: op.c  op.h
123/docs/: migrate_to_gitlab.md
123/libft/: Makefile
123/machine/: create_vm.c  main.c  validate_data.c
123/resources/corewar/champs/examples/: zork.cor
asm/: ._.gitkeep
asm_project/: Makefile  Makefile~
asm_project/asm_source/: .#corewar.h  ._main.c~  asm.h  asm.h~  asm_to_binary.c  asm_to_binary.c~  corewar.h  corewar_valid.h  corewar_valid.h~  ft_add_command_corewar.c  ft_command.c  ft_method.c  ft_name_comment.c  ft_strsplit_v2.c  ft_strsplit_v3.c  ft_valid_all.c  ft_valid_command.c  get_size_1.c  get_size_2.c  get_sizes.c  hash.c  main.c  main.c~  op.c  op.h  reg_dir_ind.c  usage.c
champion/: ._.gitkeep
corewar/: ._.gitkeep
doc/: .~lock.COREWAR.xlsx#  COREWAR.xlsx
doc_rsc/champs/: corewar
doc_rsc/champs/championships/: ._2014
docs/: workon.md
examples/: ._bee_gees.s  ._bigzork.s  ._fluttershy.s  ._helltrain.s  ._turtle.s  bee_gees.s
exemples/: ._bee_gees.cor  ._bigzork.cor  ._helltrain.s  helltrain.s
libft/: ._Makefile  ._author  ._ft_arg_void.c  ._ft_atoi.c  ._ft_binary.c  ._ft_bzero.c  ._ft_character.c  ._ft_check.c  ._ft_count_words.c  ._ft_finder.c  ._ft_flag_char.c  ._ft_int_min.c  ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_isdigit.c  ._ft_isprint.c  ._ft_isspace.c  ._ft_itoa.c  ._ft_len_char.c  ._ft_len_int.c  ._ft_lstadd.c  ._ft_lstdel.c  ._ft_lstdelone.c  ._ft_lstiter.c  ._ft_lstmap.c  ._ft_lstnew.c  ._ft_max.c  ._ft_max_int.c  ._ft_memalloc.c  ._ft_memccpy.c  ._ft_memchr.c  ._ft_memcmp.c  ._ft_memcpy.c  ._ft_memcpy_rev.c  ._ft_memdel.c  ._ft_memmove.c  ._ft_memset.c  ._ft_min_fild_width.c  ._ft_null_format.c  (+73 more)
machine/: #graphic_key.c#  CMakeLists.txt  Makefile  corewar  f  func_fork.c  func_tasks.c  get_args.c  graphic_key.c  graphic_key.c~  graphic_mode.c  graphic_print_tools.c  graphic_static.c  graphical_mode.c  graphics_key.c  init.c  init_number_players.c  init_players.c  machine.h  main.c  op_add.c  op_aff.c  op_and.c  op_fork.c  op_func.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  print.c  read_file.c  release_memory.c  (+6 more)
machine/op/: op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  tools.c
machine/test/: zork_loh.cor  zork_loh.s
resources/: ._corewar  ._exe
resources/corewar/: ._asm  ._champs  ._corewar
resources/corewar/champs/: ._42.cor  ._42.s  ._Backward.s  ._Car.s  ._Death.s  ._Gagnant.s  ._Octobre_Rouge_V4.2.s  ._Survivor.s  ._Torpille.s  ._barriere.cor  ._barriere.s  ._championships  ._ex.s  ._examples  ._jumper.s  ._lde.s  ._leeloo.s  ._mat.s  ._maxidef.s  ._mortel.s  ._new.s  ._sebc.s  ._slider2.s  ._tdc2.s  ._tdc3.s  ._tdc4.s  ._toto.s  Torpille.cor
resources/corewar/champs/championships/: ._2014
resources/corewar/champs/championships/2014/: ._bguy  ._bjacob  ._brandazz  ._cdivry  ._clafleur  ._dcohen  ._ekocevar  ._esusseli  ._evlasova  ._fcorre  ._gbir  ._gjestin  ._gleger  ._gmange  ._gpetrov  ._gudepard  ._hmichals  ._hmoutaou  ._kelickel  ._kmonrose  ._ldesgoui  ._lseguin  ._lsirigna  ._mbacoux  ._mconraux  ._rabid-on  ._results.txt  ._rmasse  ._sbuono  ._srabah-m  ._tdemay  ._vrey  ._ybouvet
resources/corewar/champs/championships/2014/bguy/: ._sam_2.0.s
resources/corewar/champs/championships/2014/bjacob/: ._doge.s
resources/corewar/champs/championships/2014/brandazz/: ._Rainbow_dash.s
resources/corewar/champs/championships/2014/cdivry/: ._youforkmytralala.s
resources/corewar/champs/championships/2014/clafleur/: ._big_feet.s
resources/corewar/champs/championships/2014/dcohen/: ._loose.s
resources/corewar/champs/championships/2014/ekocevar/: ._mandragore.s
resources/corewar/champs/championships/2014/esusseli/: ._gedeon.s
resources/corewar/champs/championships/2014/evlasova/: ._terminator.s
resources/corewar/champs/championships/2014/fcorre/: ._ultimate-surrender.s
resources/corewar/champs/championships/2014/gbir/: .__.s
resources/corewar/champs/championships/2014/gjestin/: ._salamahenagalabadoun.s
resources/corewar/champs/championships/2014/gleger/: ._Machine-gun.s
resources/corewar/champs/championships/2014/gmange/: ._corelol.s
resources/corewar/champs/championships/2014/gpetrov/: ._MarineKing.s
resources/corewar/champs/championships/2014/gudepard/: ._Kappa.s
resources/corewar/champs/championships/2014/hmichals/: ._Wall.s
resources/corewar/champs/championships/2014/hmoutaou/: ._Misaka_Mikoto.s
resources/corewar/champs/championships/2014/kelickel/: ._Varimathras.s
resources/corewar/champs/championships/2014/kmonrose/: ._justin_bee.s
resources/corewar/champs/examples/: #zork.cor#  .#zork.cor  ._bee_gees.cor  ._bee_gees.s  ._bigzork.cor  ._bigzork.s  ._fluttershy.cor  ._fluttershy.s  ._helltrain.cor  ._helltrain.s  ._turtle.cor  ._turtle.s  ._zork.cor  ._zork.s  .zork.cor.swp  zork.cor  zork.s
resources/examples/: bee_gees.s  zork.s
resources/exe/: ._asm  ._corewar
test_bot/bot/: bot.cor
test_bot/test/: test12.cor  test2.s  test6.cor
vm_project/: Makefile  Makefile~
vm_project/vm_source/: ._machine.h~  auxiliary_func.c  err_exit.c  func_fork.c  get_flags.c  get_path_files.c  graphic_key.c  graphic_mode.c  graphic_static.c  init_number_players.c  machine.h  machine.h~  main.c  op_and.c  op_ld.c  op_ldi.c  op_lfork.c  op_or.c  op_st.c  op_sti.c  print.c  run_op_cmd.c  tools2.c  validate_data.c  work_vm.c
(+12 files in other folders)
